implement thumbnail image.
